# qt6_cmake_translations

./: .gitignore  CMakeLists.txt  README.md
qml/: Rect.qml  main.qml
src/: main.cpp
translations/: app_en_US.ts  app_nl_NL.ts
